limit thumbnail to 80% viewport with to prevent being overwhelming and annoying to scroll by on small screens

--- a/public/css/src/sections/projects.less
+++ b/public/css/src/sections/projects.less
@@ -39,7 +39,8 @@
     }
 
     figure.thumbnail {
-        margin-top: 20px;
+        margin: 20px auto 0;
+        max-width: 75vw;
 
         .exampleContainer {
             max-height: 270px;
